fix: 🐛 Gap lobby page (#80)

--- a/src/components/lobby/style.module.scss
+++ b/src/components/lobby/style.module.scss
@@ -36,7 +36,7 @@
     @apply pb-8;
   }
   .actions {
-    @apply grid gap-x-5 gap-y-4 md:grid-cols-2;
+    @apply grid gap-4 md:grid-cols-2;
   }
   .abc-input.error {
     @apply relative;
